<resources>
    <string name="app_name">MarchApp</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="title_activity_make_backup">MakeBackup</string>
    <string name="next">Next</string>
    <string name="title_activity_make_admin_account">MakeAdminAccount</string>
    <string name="title_activity_view_march_statistics">ViewMarchStatistics</string>
    <string name="title_activity_have_aview_in_statistics">HaveAViewInStatistics</string>
    <string name="title_activity_participants_per_minute_chart">ParticipantsPerMinuteChart</string>
    <string name="title_activity_runner_per_minute_st">RunnerPerMinuteSt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="online">Online:</string>
    <string name="choose_volunteer">Wybierz wolontariusza</string>
    <string name="administrator_screen">Ekran Administratora</string>
    <string name="create_volunteer_account">Stwórz konto wolontariusza</string>
    <string name="create_contestant_account">Stwórz konto uczestnika</string>
    <string name="see_statistics">Zobacz statystyki</string>
    <string name="assign_volunteer_to_stage">Przypisz wolontariusza do punktu</string>
    <string name="contestants">Uczestnicy</string>
    <string name="change_password">Zmień hasło</string>
    <string name="log_out">Wyloguj się</string>
    <string name="update_volunteer_account">Zaktualizuj konto wolontariusza</string>
    <string name="contestants_time_at_stage">Czas uczesników na punkcie:</string>
    <string name="change_of_password">Zmiana hasła</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_new_password">Powtórz nowe hasło</string>
    <string name="confirm">Zatwierdź</string>
    <string name="choose_march">Wybierz marsz</string>
    <string name="choose">Wybierz</string>
    <string name="choose_stage">Wybierz punkt</string>
    <string name="register_administrator">Zarejestruj administratora</string>
    <string name="contact_number">Numer kontaktowy</string>
    <string name="email">Email</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="password">Hasło</string>
    <string name="administrator_registration">Rejestracja administratora</string>
    <string name="name">Imie</string>
    <string name="lastname">Nazwisko</string>
    <string name="stage_name">Nazwa</string>
    <string name="distance_from_origin">Kilometr</string>
    <string name="stage_type">Online (1-tak, 0-nie)</string>
    <string name="geographic_coordinates">Współrzędne geograficzne</string>
    <string name="add_stage">Dodaj punkt kontrolny</string>
    <string name="powtorz_haslo">Powtórz hasło</string>
    <string name="wybierz_zajete_miejsca">Wyświetl zajęte miejsca</string>
    <string name="registration_of_user">Rejestracja uczestnika</string>
    <string name="register_user">Zarejestruj uczestnika</string>
    <string name="registration_of_volunteer">Rejestracja wolontariusza</string>
    <string name="register_volunteer">Zarejestruj wolontariusza</string>
    <string name="delete_stage">Usuń punkt</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="do_you_really_want_to_delete_this_stage">Czy na pewno chcesz usunąć ten punkt?</string>
    <string name="stage_status">Status punktu ...</string>
    <string name="register">Zarejestruj się</string>
    <string name="create_backup_of_database">Stwórz backup bazy danych</string>
    <string name="create_backup">Stwórz backup</string>
    <string name="backup_succesfully_done">Backup successfully done</string>
    <string name="march_result">Wyniki marszu</string>
    <string name="modify_contestants_data">Modyfikuj dane uczestników</string>
    <string name="search_contestants">Wyszukaj uczestnika</string>
    <string name="modify_stages">Modyfikuj punkty</string>
    <string name="enter_stage_name">Wpisz nazwę punktu</string>
    <string name="delete">Usuń</string>
    <string name="stage_list">Lista punktów</string>
    <string name="modify_route">Modyfikuj trasę</string>
    <string name="upload_map">Upload map</string>
    <string name="assign_points">Assign points</string>
    <string name="organiser_screen">Ekran Organizatora</string>
    <string name="modify_event">Modyfikuj wydarzenie</string>
    <string name="create_administrator_account">Stwórz konto administratora</string>
    <string name="volunteers">Wolontariusze</string>
    <string name="modify_delete_stage_from_route">Modyfikuj/usuń punkty trasy</string>
    <string name="add_stage_to_route">Dodaj punkt trasy</string>
    <string name="edit_required_contestants_data">Edytuj wymagane dane uczestników</string>
    <string name="edit_mode">Tryb edycji</string>
    <string name="occupied_places">Zajęte miejsca</string>
    <string name="user_data">Dane użytkownika</string>
    <string name="contestants_who_managed_to_complete_the_competition">Uczestnicy, którym udało się ukończyć zawody</string>
    <string name="m20">M20</string>
    <string name="k20">K20</string>
    <string name="m50">M50</string>
    <string name="phone_number">Nr telefonu</string>
    <string name="update_of_user_data">Aktualizacja danych uczestnika</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="update_data">Zaktualizuj dane</string>
    <string name="update_of_volunteer_data">Aktualizacja danych wolontariusza</string>
    <string name="statistics_for_stages">Statystyki dla punktów</string>
    <string name="main_statistics">Ogólne statystyki</string>
    <string name="volunteer_screen">Ekran Wolontariusza</string>
    <string name="contestants_statistics">Statystyki uczestników</string>
    <string name="stage">Punkt kontrolny</string>
    <string name="scan_contestant">Zeskanuj uczestnika</string>
    <string name="your_stage">Twój punkt</string>
    <string name="choose_this_stage">Wybierz ten punkt</string>
    <string name="volunteer_data">Dane wolontariusza</string>
    <string name="name_colon">Imie:</string>
    <string name="lastname_colon">Nazwisko:</string>
    <string name="stage_colon">Punkt:</string>
    <string name="choose_new_stage">Wybierz nowy punkt</string>
    <string name="return_button">Powrót</string>
    <string name="save">Zapisz</string>
    <string name="stage_edit">Edycja punktu</string>
    <string name="stage_name_colon">Nazwa:</string>
    <string name="online_colon">Online:</string>
    <string name="distance_from_origin_colon">Kilometr:</string>
    <string name="coordinates_colon">Współrzędne:</string>
    <string name="starting_number">Nr startowy:</string>
    <string name="pseudonim_colon">Pseudonim:</string>
    <string name="stage_data">Dane punktu</string>
    <string name="contestants_data">Dane uczestnika</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="data_edit_mode">Edycja danych</string>
    <string name="volunteers_data">Dane wolontariuszy</string>
    <string name="log_in">Zaloguj</string>
    <string name="logging_in">Logowanie</string>
</resources>