<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/insets">
    
    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contestants_data"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/starting_number"
        android:layout_marginTop="10dp"
        android:id="@+id/start_no"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_colon"
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname_colon"
        android:layout_marginTop="10dp"
        android:id="@+id/lastname"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pseudonim_colon"
        android:id="@+id/pseudonim"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/backb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="20dp"
        android:text="@string/return_button" />

</LinearLayout>