<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/insets">
    
    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volunteer_data"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_colon"
        android:id="@+id/imie"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname_colon"
        android:layout_marginTop="10dp"
        android:id="@+id/nazwisko"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage_colon"
        android:layout_marginTop="10dp"
        android:id="@+id/point"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_new_stage"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/newpoint"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:alwaysDrawnWithCache="false"
        android:background="@android:drawable/editbox_dropdown_dark_frame"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:spinnerMode="dialog" />

    <GridLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/backb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:text="@string/return_button" />

        <Button
            android:id="@+id/edit_button"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:text="@string/save" />
    </GridLayout>


</LinearLayout>