<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logic.admin.AdministratorMain">

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/administrator_screen"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/createVolunteer"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screenTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/create_volunteer_account" />

    <Button
        android:id="@+id/createParticipant"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createVolunteer"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/create_contestant_account" />

    <Button
        android:id="@+id/view_statistics"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createParticipant"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/see_statistics" />

    <Button
        android:id="@+id/updateVolunteer"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_statistics"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/update_volunteer_account" />

    <Button
        android:id="@+id/addPointToVolunteer"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateVolunteer"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/assign_volunteer_to_stage" />

    <Button
        android:id="@+id/updateParticipant"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addPointToVolunteer"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/contestants" />

    <Button
        android:id="@+id/changePass"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updateParticipant"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/change_password" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changePass"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/log_out" />

</RelativeLayout>