<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logic.organiser.OrganisatorMain">

    <Button
        android:id="@+id/btnForward"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/ekran_organizatora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/organiser_screen"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/modify_points"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ekran_organizatora"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/modify_delete_stage_from_route" />

    <Button
        android:id="@+id/add_points"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modify_points"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/add_stage_to_route" />

    <Button
        android:id="@+id/modify_tracks"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_points"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/modify_route" />

    <Button
        android:id="@+id/make_backup"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modify_tracks"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/create_backup_of_database" />

    <Button
        android:id="@+id/modify_par_data"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/make_backup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:text="@string/edit_required_contestants_data" />

</RelativeLayout>